--- a/showing.css
+++ b/showing.css
@@ -49,8 +49,8 @@
     background-image: url("showingpage.jpg");
     display: flex;
     flex-direction: column;
-    height:90vh;
-    width: 90vw;
+    height:100vh;
+    width: 100vw;
     margin-left: 5vw;
     /* background-image: url("backside.jpeg"); */
     /* margin-left: 15%; */
@@ -59,7 +59,7 @@
     color: white;
   }
   .content{
-    margin-left: 5vh;
+    margin-left: 5vw;
     display: flex;
     flex-direction: column;
     justify-content: center;
